@@ -1826,6 +1826,7 @@
 	"apierror-templateexpansion-notwikitext": "Template expansion is only supported for wikitext content. $1 uses content model $2.",
 	"apierror-timeout": "The server did not respond within the expected time.",
 	"apierror-toofewexpiries": "$1 expiry {{PLURAL:$1|timestamp was|timestamps were}} provided where $2 {{PLURAL:$2|was|were}} needed.",
+	"apierror-toomanyvalues": "Too many values supplied for parameter <var>$1</var>. The limit is $2.",
 	"apierror-unknownaction": "The action specified, <kbd>$1</kbd>, is not recognized.",
 	"apierror-unknownerror-editpage": "Unknown EditPage error: $1.",
 	"apierror-unknownerror-nocode": "Unknown error.",
@@ -1874,7 +1875,6 @@
 	"apiwarn-redirectsandrevids": "Redirect resolution cannot be used together with the <var>revids</var> parameter. Any redirects the <var>revids</var> point to have not been resolved.",
 	"apiwarn-tokennotallowed": "Action \"$1\" is not allowed for the current user.",
 	"apiwarn-tokens-origin": "Tokens may not be obtained when the same-origin policy is not applied.",
-	"apiwarn-toomanyvalues": "Too many values supplied for parameter <var>$1</var>. The limit is $2.",
 	"apiwarn-truncatedresult": "This result was truncated because it would otherwise be larger than the limit of $1 bytes.",
 	"apiwarn-unclearnowtimestamp": "Passing \"$2\" for timestamp parameter <var>$1</var> has been deprecated. If for some reason you need to explicitly specify the current time without calculating it client-side, use <kbd>now</kbd>.",
 	"apiwarn-unrecognizedvalues": "Unrecognized {{PLURAL:$3|value|values}} for parameter <var>$1</var>: $2.",
