@@ -1714,6 +1714,7 @@
 	"apierror-templateexpansion-notwikitext": "{{doc-apierror}}\n\nParameters:\n* $1 - Page title.\n* $2 - Content model.",
 	"apierror-timeout": "{{doc-apierror}}\nAPI error message that can be used for client side localisation of API errors.",
 	"apierror-toofewexpiries": "{{doc-apierror}}\n\nParameters:\n* $1 - Number provided.\n* $2 - Number needed.",
+	"apierror-toomanyvalues": "{{doc-apierror}}\n\nParameters:\n* $1 - Parameter name.\n* $2 - Maximum number of values allowed.",
 	"apierror-unknownaction": "{{doc-apierror}}\n\nParameters:\n* $1 - Action provided.",
 	"apierror-unknownerror-editpage": "{{doc-apierror}}\n\nParameters:\n* $1 - Error code (an integer).",
 	"apierror-unknownerror-nocode": "{{doc-apierror}}",
@@ -1761,7 +1762,6 @@
 	"apiwarn-redirectsandrevids": "{{doc-apierror}}",
 	"apiwarn-tokennotallowed": "{{doc-apierror}}\n\nParameters:\n* $1 - Token type being requested, typically named after the action requiring the token.",
 	"apiwarn-tokens-origin": "{{doc-apierror}}",
-	"apiwarn-toomanyvalues": "{{doc-apierror}}\n\nParameters:\n* $1 - Parameter name.\n* $2 - Maximum number of values allowed.",
 	"apiwarn-truncatedresult": "{{doc-apierror}}\n\nParameters:\n* $1 - Size limit in bytes.",
 	"apiwarn-unclearnowtimestamp": "{{doc-apierror}}\n\nParameters:\n* $1 - Parameter name.\n* $2 - Supplied value.",
 	"apiwarn-unrecognizedvalues": "{{doc-apierror}}\n\nParameters:\n* $1 - Parameter name.\n* $2 - List of unknown values supplied.\n* $3 - Number of unknown values.",
